did upgrades